kubernetes/apps/default/lyrion-music-server/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lyrion-music-server
  labels:
    app: lms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lms
  template:
    metadata:
      labels:
        app: lms
    spec:
      containers:
        - name: lms
          image: lmscommunity/lyrionmusicserver:9.1.0
          ports:
            - containerPort: 9000
              protocol: TCP
            - containerPort: 9090
              protocol: TCP
            - containerPort: 3483
              protocol: TCP
            - containerPort: 3483
              protocol: UDP
